@@ -45,6 +45,7 @@
     <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
     <script src="bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
     <script src="scripts/services/segmentio.js"></script>
     <!-- endbuild -->
@@ -74,6 +75,8 @@
     <script type="application/javascript" src="scripts/services/nodeinfo.js"></script>
     <script type="application/javascript" src="scripts/services/checks.js"></script>
     <script type="application/javascript" src="scripts/services/udc.js"></script>
+    <script type="application/javascript" src="scripts/services/translation.js"></script>
+    
 
     <script type="application/javascript" src="scripts/controllers/common.js"></script>
     <script type="application/javascript" src="scripts/controllers/feed.js"></script>
