@@ -22,11 +22,11 @@
     "purl": "~2.3.1",
     "codemirror": "4.6.0",
     "angularjs-nvd3-directives": "~0.0.7",
-    "angular-translate": "^2.11.0",
-    "angular-translate-loader-static-files": "^2.11.0",
-    "angular-translate-storage-cookie": "^2.11.0"
+    "angular-translate": "^2.12.0",
+    "angular-translate-loader-static-files": "^2.12.0",
+    "angular-translate-storage-cookie": "^2.12.0",
+    "angular-translate-loader-partial": "^2.12.0"
   },
-  "devDependencies": {},
   "resolutions": {
     "angular": "~1.3.15",
     "d3": "~3.4.1"
